--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -27,6 +27,7 @@
     "@ngrx/effects": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "nativescript-angular": "~8.21.0",
+    "nativescript-pulltorefresh": "^2.3.0",
     "nativescript-ui-sidedrawer": "~8.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
