--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -26,8 +26,11 @@
     "@nativescript/theme": "~2.3.0",
     "@ngrx/effects": "^9.2.0",
     "@ngrx/store": "^9.2.0",
+    "native-toast": "^2.0.0",
     "nativescript-angular": "~8.21.0",
     "nativescript-pulltorefresh": "^2.3.0",
+    "nativescript-toast": "^2.0.0",
+    "nativescript-toasts": "^1.0.3",
     "nativescript-ui-sidedrawer": "~8.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
