--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -28,7 +28,9 @@
     "@ngrx/store": "^9.2.0",
     "native-toast": "^2.0.0",
     "nativescript-angular": "~8.21.0",
+    "nativescript-couchbase": "^1.0.18",
     "nativescript-pulltorefresh": "^2.3.0",
+    "nativescript-sqlite": "^2.6.3",
     "nativescript-toast": "^2.0.0",
     "nativescript-toasts": "^1.0.3",
     "nativescript-ui-sidedrawer": "~8.0.0",
