--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -30,6 +30,7 @@
     "nativescript-angular": "~8.21.0",
     "nativescript-couchbase": "^1.0.18",
     "nativescript-pulltorefresh": "^2.3.0",
+    "nativescript-social-share": "^1.6.0",
     "nativescript-sqlite": "^2.6.3",
     "nativescript-toast": "^2.0.0",
     "nativescript-toasts": "^1.0.3",
