--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -28,7 +28,11 @@
     "@ngrx/store": "^9.2.0",
     "native-toast": "^2.0.0",
     "nativescript-angular": "~8.21.0",
+    "nativescript-camera": "^4.5.0",
     "nativescript-couchbase": "^1.0.18",
+    "nativescript-email": "^1.6.0",
+    "nativescript-google-maps-sdk": "^2.9.1",
+    "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-pulltorefresh": "^2.3.0",
     "nativescript-social-share": "^1.6.0",
     "nativescript-sqlite": "^2.6.3",
