--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -39,6 +39,7 @@
     "nativescript-toast": "^2.0.0",
     "nativescript-toasts": "^1.0.3",
     "nativescript-ui-sidedrawer": "~8.0.0",
+    "nativescript-unit-test-runner": "^0.7.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
     "serialize-javascript": "^4.0.0",
@@ -48,7 +49,12 @@
   "devDependencies": {
     "@angular/compiler-cli": "~8.2.0",
     "@ngtools/webpack": "~8.2.0",
+    "@types/jasmine": "^3.5.11",
     "codelyzer": "~4.5.0",
+    "karma": "5.1.1",
+    "karma-jasmine": "3.3.1",
+    "karma-nativescript-launcher": "0.4.0",
+    "karma-webpack": "3.0.5",
     "nativescript-dev-webpack": "~1.5.0",
     "node-sass": "^4.7.1",
     "tslint": "~5.19.0",
